<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:minWidth="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/signup_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Let's get You In !"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_input_field"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_prompt_forgot_pass"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/edittext_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_input_field"
            android:ems="10"
            android:hint="@string/enter_otp_hint"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/reset_otp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resend Otp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:layout_marginTop="30dp"
            android:text="@string/set_new_password_button"
            android:onClick="setNewPassword"
            android:background="@drawable/button_signin"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>