<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="#FDCAC7">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/signup_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/login_prompts"
            android:text="@string/sign_up_prompt"
            android:layout_marginBottom="40dp"/>


        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:background="@drawable/login_input_field"
            android:hint="Name"
            android:inputType="textPersonName"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_input_field"
            android:ems="10"
            android:hint="Email address"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_input_field"
            android:ems="10"
            android:hint="Password"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edittext_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:background="@drawable/login_input_field"
            android:hint="Confirm Password"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_condition_checkbox"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up_button"
            android:onClick="signUpUser"
            android:background="@drawable/button_signin"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>